Bug 138592 - Using mouse to put cursor after a combined character is different compared to using keyboard arrow keys
Summary: Using mouse to put cursor after a combined character is different compared to...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2020-12-01 08:04 UTC by Mike Kaganski
Modified: 2021-01-26 16:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-12-01 08:04:06 UTC
Open attachment 167703 [details]. Use keyboard arrow keys to navigate just after the second line's "á" combined character (it's U+0061 "LATIN SMALL LETTER A" + U+0301 "COMBINING ACUTE ACCENT"). Press e.g. "s". See that the "s" is added after the "á", as expected.

Now undo edits, and this time use mouse to put cursor after the "á": e.g., click far right of the line where the character is. Press "s". See that the line becomes "aś", i.e. the "s" was inserted *between* "a" and the combining accent.

Mouse clicks must position cursor exactly at the same positions that are available using keyboard; it should never allow positioning between parts of a combined character cell that is unreachable using keyboard.

Tested using Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 2 Justin L 2020-12-16 07:42:21 UTC
I see the acute attached to the s when using mouse positioning even in LO 3.5 bibisect, as well as in bibisect-linux-x64-5.3 oldest. (I am just running LO without SAL_USE_COMMON_LAYOUT=TRUE, but just for fun I tried that on 5.3 oldest and got the same result.)
Comment 3 Commit Notification 2020-12-16 20:22:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6a7cc15e971218c2488fc2bba8016937264e2e0

tdf#138592: also consider following zero-width text portions

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Justin L 2021-01-26 16:15:27 UTC
Assuming this can be closed as fixed. I confirmed it works now in 7.2+