tdf#138592: also consider following zero-width text portions

... after this text portion, to handle possible combining characters
inside separate text span, and hence separate portions.

The fix is modelled after 63d8041c60c5d7c63dd34f94a694871b7ea9e2ca.
Thanks Justin!

Change-Id: Idf3b79ce1c384f093bce201ccb5ecefd350e1478